@@ -194,49 +194,13 @@ class VideoList(listitem.VirtualFS):
 			urlString = {u"0":u"%sdate.html", u"1":u"%sartist.html", u"2":u"%srating.html", u"3":u"%sviews.html"}[_plugin.getSetting("sort")]
 			url = urlString % _plugin["url"]
 		
-		# Fetch SourceCode
-		sourceCode = urlhandler.urlread(url, 14400) # TTL = 4 Hours
-		
 		# Set Content Properties
 		self.set_sort_methods(self.sort_method_unsorted)
 		
-		# Fetch and Return VideoItems
-		return self.regex_scraper(sourceCode)
-	
-	def regex_scraper(self, sourceCode):
-		# Create Speed vars
-		localListitem = listitem.ListItem
-		import CommonFunctions
-		
-		# Add Next Page if Exists   
-		nextUrl = re.findall('<a href="(\S+?)">next \xbb</a>', sourceCode)
-		if nextUrl: self.add_next_page(url={"url":u"http://www.metalvideo.com/%s" % nextUrl[0]})
-		
-		# Iterate the list of videos
-		searchUrl = re.compile('<a href="(\S+?)">')
-		searchImg = re.compile('<img src="(\S+?)"')
-		searchSong = re.compile('<span class="song_name">(.+?)</span>')
-		searchArtist = re.compile('<span class="artist_name">(.+?)</span>')
-		for htmlSegment in CommonFunctions.parseDOM(sourceCode, u"li", {u"class":u"video"}):
-			# Fetch artist and url
-			artist = searchArtist.findall(htmlSegment)[0]
-			url = searchUrl.findall(htmlSegment)[0]
-			
-			# Create listitem of Data
-			item = localListitem()
-			item.setLabel(u"%s - %s" % (artist, searchSong.findall(htmlSegment)[0]))
-			item.setInfoDict(artist=[artist])
-			item.setParamDict(action="PlayVideo", url=url)
-			
-			# Set Thumbnail Image
-			image = searchImg.findall(htmlSegment)
-			if image: item.setThumb(image[0])
-			
-			# Add Context item to link to related videos
-			item.addRelatedContext(url=url[url.rfind(u"_")+1:url.rfind(u".")])
-			
-			# Store Listitem data
-			yield item.getListitemTuple(True)
+		# Fetch SourceObj
+		import parsers
+		with urlhandler.urlopen(url, 14400) as sourceObj: # TTL = 4 Hours
+			return parsers.VideosParser().parse(sourceObj)
 
 class PlayVideo(listitem.PlaySource):
 	@plugin.error_handler
@@ -247,6 +211,7 @@ class PlayVideo(listitem.PlaySource):
 			# Add Current path to playlist
 			playlist = _plugin.xbmc.PlayList(1)
 			playlist.add(_plugin.handleThree)
+			
 			# Return video url untouched
 			return self.find_video(0) # TTL = 1 Week
 		
@@ -255,6 +220,7 @@ class PlayVideo(listitem.PlaySource):
 			# Clear Playlist first
 			playlist = _plugin.xbmc.PlayList(1)
 			playlist.clear()
+			
 			# Return Video Player url Twice to start party mode playlist
 			return {"url":[self.find_video(0), _plugin.handleThree+"partymode=true"]}
 		
