@@ -1,5 +1,6 @@
 [B]Version 2.0.1[/B]
-- Added option to disable url caching from the add-on settings.
+- Added option to disable url caching from the add-on settings
+- Removed script.module.parsedom dependency
 
 [B]Version 2.0.0[/B] 2015-02-20
 - Added video of the day item
